# genesis-bigr-discovery

./: .env.example  .gitignore  genesis.yaml  pyproject.toml  rapor.html  render.yaml
.claude/: CLAUDE.md
.github/workflows/: neon-branch.yml  neon-cleanup.yml  test.yml
alembic/: env.py
alembic/versions/: 7aab0cde7dd5_merge_family_and_firewall_branches.py  a1b2c3d4e5f6_add_agents_table.py  a2b3c4d5e6f7_add_family_devices_table.py  b1c2d3e4f5a6_add_collective_signals_table.py  b2c3d4e5f6a7_add_shield_tables.py  c3d4e5f6a7b8_add_agent_commands_table.py  f782f2b25b23_initial_schema.py  (+8 more)
bigr/: __init__.py  analytics.py  cli.py  compliance.py  config.py  db.py  diff.py  models.py  output.py  topology.py  watcher.py  watcher_api.py
data/: oui.csv
deep_research/: BAS_MARKET_RESEARCH_2026.md
frontend/: eslint.config.js  index.html  package.json  render-build.sh  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
rules/: alert_rules.yaml  hostname_rules.yaml  port_rules.yaml  service_rules.yaml  vendor_rules.yaml
scripts/: alembic.sh  install-agent.sh  migrate_sqlite_data.py
tests/: test_abuseipdb.py  test_agent_alerts.py  test_agent_auth.py  test_agent_cli.py  test_agent_commands.py  test_agent_daemon.py  test_agent_routes.py  test_ai_router.py  test_alembic.py  test_alerts.py  test_analytics.py  test_blocklist_manager.py  test_classifier.py  test_cli.py  test_cli_integration.py  test_collective.py  test_compliance.py  test_config.py  test_core_database.py  test_core_models.py  test_core_services.py  test_custom_rules.py  test_cve.py  test_dashboard.py  test_dashboard_async.py  test_db.py  test_diff.py  test_dns_cache.py  test_dns_resolver.py  test_dns_server.py  test_family_shield.py  test_fingerprint_v2.py  test_firewall.py  test_firewall_adapters.py  test_guardian_api.py  test_guardian_config.py  test_guardian_daemon.py  test_guardian_e2e.py  test_guardian_health.py  test_guardian_models.py  (+37 more)
(+356 files in other folders)
